<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">FinazAPP</string>
    <string name="titulo">FinazAPP</string>
    <string name="texto_prueba">Texto de prueba</string>
    <string name="hint_prueba">Hint de prueba</string>
    <string name="boton">Boton</string>
    <string name="ingresar">Ingresar</string>
    <string name="login">Comienza</string>
    <string name="contrasena">Contraseña</string>
    <string name="contrasena1">Contraseña:</string>
    <string name="registrarse">Registrate</string>
    <string name="conf_contrasena">Confirmar Contraseña:</string>
    <string name="el_ahorro">El ahorro te espera</string>
    <string name="volver">Volver</string>
    <string name="dashboard">Dashboard</string>
    <string name="reporte">Reporte</string>
    <string name="perfil">Perfil</string>
    <string name="alertas">Alertas</string>
    <string name="ingresos">Ingresos</string>
    <string name="desc_ingresos">Tu ingreso total de este mes es de:</string>
    <string name="ingresos_mens">Ingresos mensuales</string>
    <string name="ingresos_cas">Ingresos casuales</string>
    <string name="nuevo_ingreso">Agregar nuevo ingreso</string>
    <string name="ceros">0,00$</string>
    <string name="nombres">Nombres:</string>
    <string name="apellidos">Apellidos:</string>
    <string name="usuario1">Usuario</string>
    <string name="usuario">Usuario:</string>
    <string name="tel">Telefono:</string>
    <string name="doc">Mi documento:</string>
    <string name="mail">Email:</string>
    <string name="cambiar_con">Cambiar contraseña</string>
    <string name="guardar_cam">Guardar cambios</string>
    <string name="borrar_pf">Borrar Perfil</string>
    <string name="semanal">Semanal</string>
    <string name="Diario">Diario</string>
    <string name="mensual">Mensual</string>
    <string name="anual" tools:ignore="Typos">Anual</string>
    <string name="navigation_drawer_open">Abrir menú</string>
    <string name="navigation_drawer_close">Cerrar menú</string>
    <string name="inicio">Inicio</string>
    <string name="salir">Salir</string>
    <string name="gastados">gastados</string>
    <string name="cien_millones">100.000.000,00</string>
    <string name="gastos_varios">gastos hormiga</string>
    <string name="alimentos">alimentos</string>
    <string name="transporte">transporte</string>
    <string name="servicios">servicios</string>
    <string name="disponible">dinero disponible</string>
    <string name="mercado">mercado</string>
    <string name="deudas">Deudas</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="action_settings">Settings</string>
    <string name="desc_logo">imagen de una moneda en blanco con fondo amarillo</string>
    <string name="desc_usuario">Silueta simplificada de una persona</string>
    <string name="desc_mas">simbolo de mas</string>
    <string name="title_activity_dashboard2">Dashboard2</string>
    <string name="contrase_a_actual">Contraseña actual</string>
    <string name="nueva_contrase_a">Nueva contraseña</string>
    <string name="confirmar_nueva_contrase_a">Confirmar nueva contraseña</string>
    <string name="las_contrase_as_no_coinciden">las contraseñas no coinciden</string>
    <string name="requerimientos_cont">La contraseña debe tener al menos 8 caracteres, una mayúscula, una minúscula y un carácter especial</string>
    <string-array name="categorias">
        <item>Gastos Hormiga</item>
        <item>Alimentos</item>
        <item>Transporte</item>
        <item>Servicios</item>
        <item>Mercado</item>
        <item>Deudas</item>
    </string-array>

    <string-array name="tiempos">
        <item>Semanal</item>
        <item>Mensual</item>
        <item tools:ignore="Typos">Anual</item>
    </string-array>

    <string name="selec_cat">categoria</string>
    <string name="cantidad">cantidad</string>
    <string name="fecha">fecha</string>
    <string name="descripcion">descripción</string>
    <string name="error_usuario_duplicado">Este nombre de usuario ya está en uso. Por favor, elija otro</string>
    <string name="todos_los_campos_son_obligatorios">Todos los campos son obligatorios</string>
    <string name="nombres_apellidos">Nombres Apellidos</string>
    <string name="el_usuario_no_existe">el usuario no existe</string>
    <string name="la_contrase_a_no_es_correcta_o_no_coincide">la contraseña no es correcta o no coincide</string>
    <string name="error_al_obtener_el_id_del_usuario">Error al obtener el ID del usuario</string>
    <string name="modificar_ingreso">modificar ingreso</string>
    <string name="eiminar_ingreso">Eiminar ingreso</string>
    <string name="eiminar_alerta">Eiminar alerta</string>
    <string name="eliminar_ingreso">eliminar ingreso</string>
    <string name="modificar_gasto">modificar gasto</string>
    <string name="modificar_alerta">modificar alerta</string>
    <string name="eliminar_gasto">eliminar_gasto</string>
    <string name="eliminar_gasto1">eliminar gasto</string>
    <string name="en_construcci_n">En construcción</string>
    <string name="sorry">Lo sentimos, actualmente esta sección se encuentra en estado de desarrollo</string>
    <string name="reporte_de_gastos">Reporte de gastos</string>
    <string name="no_data">No hay datos suficientes para generar este grafico</string>
    <string name="flecha_atras">flecha hacia atrás</string>
    <string name="flecha_adelante">flecha hacia adelante</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvDescripcion">Descripcióm</string>
    <string name="Recomendaciones">Recomendaciones</string>
    <string name="btn_ahorro">Ahorro</string>
    <string name="Alertas_totales">Alertas totales</string>
    <string name="alertas2">agrega tus alertas</string>
    <string name="my_button">Inicia tu ahorro</string>
    <string name="ListComplete">Lista de gastos</string>
    <string name="nuevaalerta">Agregar nueva alerta</string>


</resources>