<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/dash"
            android:title="@string/dashboard"
            app:itemTextAppearance="@style/AppTheme.NavigationViewTextStyle" />
        <item
            android:id="@+id/nav_ingresos"
            android:icon="@drawable/ingresos"
            android:title="@string/ingresos"/>
        <item
            android:id="@+id/nav_reporte"
            android:icon="@drawable/reporte"
            android:title="@string/reporte" />

        <item
            android:id="@+id/fragmentAlertas"
            android:icon="@android:drawable/ic_lock_idle_alarm"
            android:title="@string/alertas"/>
        <item
            android:id="@+id/fragmentProyecciones"
            android:icon="@drawable/baseline_add_reaction_25"
            android:title="@string/Recomendaciones" />

    </group>
</menu>