<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vista.UI.FragmentAlertas">


    <TextView
        android:id="@+id/Alertas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="36dp"
        android:text="Controla tus gastos"
        android:textColor="#001A41"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtAlertas"
        style="@style/TxtVerdeGrande"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/Alertas_totales"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
    <View
        android:id="@+id/lineaVerde2"
        android:layout_width="match_parent"
        android:layout_height="2.3dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/txtAlertas"
        android:background="@color/verde_oscuro"
        />


    <LinearLayout
        android:id="@+id/contenedor_alerta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/lineaVerde2"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="16dp"
        style="@style/TxtNegroMedianoItalic2"
        />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btnalertanueva"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contenedor_alerta">

        <ImageButton
            android:id="@+id/botonCirculo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/circulo_verde"
            android:contentDescription="@string/desc_mas"
            android:elevation="2dp"
            android:padding="2dp"
            android:scaleType="fitCenter"
            android:src="@drawable/mas"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textoNuevoIngMes"
            style="@style/TxtVerdeMedianoItalicNegrita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/alertas2"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/botonCirculo"
            app:layout_constraintTop_toTopOf="@id/botonCirculo" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:src="@drawable/women"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Alertas"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>